# ASmoothnessEnergyWithoutBoundaryDistortionForCurvedSurfaces

./: .gitmodules  README.md
MATLAB_experiments/: .gitignore  hessian_squared.m
MATLAB_experiments/closed_interpolation_problems/: closed_interpolation_problems.m
MATLAB_experiments/convergence_annulus/: convergence_annulus.m
MATLAB_experiments/convergence_scattered/: convergence_scattered.m
MATLAB_experiments/dense_smoothing/: dense_smoothing.m
MATLAB_experiments/different_meshings/: different_meshings.m
MATLAB_experiments/eigenvalues_sphere/: eigenvalues_sphere.m
MATLAB_experiments/eigenvectors/: eigenvectors.m
MATLAB_experiments/forwardexperiments/: forwardexperiments.m
MATLAB_experiments/further-convergence-plots/: further_convergence_plots.m
MATLAB_experiments/hemispheres/: hemispheres.m
MATLAB_experiments/holed_interpolation_problem/: holed_interpolation_problem.m
MATLAB_experiments/nullspaces/: nullspaces.m
MATLAB_experiments/otherannulusexps/: other_annulus_experiments.m
MATLAB_experiments/smoothing_example/: smoothing_example.m
MATLAB_experiments/teaser/: teaser.m
MATLAB_experiments/with_and_without_curvature_correction/: with_and_without_curvature_correction.m
cpp_interface/: .gitignore  CMakeLists.txt
cpp_interface/applications/: CMakeLists.txt
cpp_interface/applications/Mex/: CMakeLists.txt  curved_hessian.m  main.cpp
cpp_interface/include/hessian/: angle_defect.cpp  angle_defect.h  crof_curvature_correction.cpp  crof_curvature_correction.h  crof_differential.cpp  crof_differential.h  crof_laplacian.cpp  crof_laplacian.h  crof_massmatrix.cpp  crof_massmatrix.h  orient_halfedges.cpp  orient_halfedges.h
